--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
+    "react-tooltip": "^5.26.4",
     "swiper": "^11.1.1"
   }
 }
